-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 12
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8318530 | 11.0.22-oracle | Ivan Bereziuk | P2 | Closed | Fixed | b04 |
| JDK-8319930 | 11.0.22 | Andrew Lu | P2 | Resolved | Fixed | b03 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007f0388f60988, pid=26361, tid=26362
#
# JRE version: (12.0) (build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (12-internal+0-2018-08-30-1930205.jesper.wilhelmsson.jdk-flags, mixed mode, aot, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x84c988] HSpaceCounters::update_used(unsigned long)+0x8
#
Seen in performance testing when running Perfstartup-Netty-Tuned-G1 and Perfstartup-JFAAS_Hello-Tuned-G1.
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007f0388f60988, pid=26361, tid=26362
#
# JRE version: (12.0) (build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (12-internal+0-2018-08-30-1930205.jesper.wilhelmsson.jdk-flags, mixed mode, aot, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x84c988] HSpaceCounters::update_used(unsigned long)+0x8
#
Seen in performance testing when running Perfstartup-Netty-Tuned-G1 and Perfstartup-JFAAS_Hello-Tuned-G1.
- backported by
-
JDK-8319930 Crash in HSpaceCounters::update_used()
-
- Resolved
-
-
JDK-8318530 Crash in HSpaceCounters::update_used()
-
- Closed
-
- relates to
-
JDK-8209062 Clean up G1MonitoringSupport
-
- Resolved
-