8210265: Crash in HSpaceCounters::update_used()

Guard call to update HSpaceCounters with flag

Reviewed-by: shade, sjohanss, kbarrett